[gd_scene load_steps=2 format=3 uid="uid://clgxi4bd78qqi"]

[ext_resource type="Script" uid="uid://cxxe461qf0y26" path="res://ui/level_up/level_up_ui.gd" id="1_v3sp3"]

[node name="LevelUpUI" type="CanvasLayer"]
script = ExtResource("1_v3sp3")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="BackgroundColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundColor/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="BackgroundColor/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Up!"
horizontal_alignment = 1

[node name="UpgradeButton1" type="Button" parent="BackgroundColor/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Button 1
"

[node name="UpgradeButton2" type="Button" parent="BackgroundColor/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Button 1
"

[node name="UpgradeButton3" type="Button" parent="BackgroundColor/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Button 1
"

[connection signal="pressed" from="BackgroundColor/MarginContainer/VBoxContainer/UpgradeButton1" to="." method="select_upgrade"]
[connection signal="pressed" from="BackgroundColor/MarginContainer/VBoxContainer/UpgradeButton2" to="." method="select_upgrade"]
[connection signal="pressed" from="BackgroundColor/MarginContainer/VBoxContainer/UpgradeButton3" to="." method="select_upgrade"]
